<resources>
    <string name="app_name">TWorldApplication</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_home_main">HomeMainActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="head">这里是HeadView</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载...</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>
    <string name="none_paired">没有蓝牙设备</string>
    <string name="title_activity_send_apdu">SendApduActivity</string>


    <string name="company_name">话机世界通信集团股份有限公司</string>
    <string name="fileManage">文件管理</string>
    <string name="backLastDir">返回上一层</string>
    <string name="action_settings">Settings</string>
    <string name="chooserIdCardType">证件类型</string>
    <string name="ActivationProgram">激活程序</string>
    <string name="takePicture">扫描识别</string>
    <string name="license_verification_failed">授权验证失败</string>
    <string name="online_activation">在线激活</string>
    <string name="activation_success">激活成功</string>
    <string name="dialog_title">首次使用若能联网请在此填写序列号，不区分大小写，并点击“授权验证”按钮.</string>
    <string name="back">返回</string>
    <string name="exit">退出</string>
    <string name="importRecog">导入识别</string>
    <string name="back_confirm">再按一次退出</string>
    <string name="chooseRecogType">选择识别类型</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="unsupport_auto_focus">，没有对焦功能</string>
    <string name="toast_autofocus_failure">对焦失败</string>
    <string name="unsupportflash">不支持闪光灯</string>
    <string name="exception">未识别代码：</string>
    <string name="exception1">激活失败代码：</string>
    <string name="exception2">识别初始化失败代码：</string>
    <string name="exception3">识别载入图像失败，请重新识别代码：</string>
    <string name="exception4">识别载入图像失败，识别初始化失败,请重试代码：</string>
    <string name="exception5">识别载入图像失败代码：</string>
    <string name="exception6">识别失败代码：</string>
    <string name="exception7">免费次数已用完，请购买!</string>
    <string name="exception8">次数异常:</string>
    <string name="exception9">照片信息识别失败，请重新上传</string>
    <string name="recognized_failed">识别失败</string>
    <string name="please_connect_network">请连接网络</string>
    <string name="network_unused">网络不可用</string>
    <string name="detectLightspot">检测到光斑,请改变扫描角度！</string>
    <string name="opendetectLightspot">开启光斑检测功能！</string>
    <string name="closeddetectLightspot">关闭光斑检测功能！</string>

    <!-- 证件类型 -->
    <string name="passport">护照</string>
    <string name="ID_card">二代身份证</string>
    <string name="EPT_HK_Macau">港澳通行证</string>
    <string name="IDCard_Macau">澳门身份证</string>
    <string name="New_IDCard_Macau">新版澳门身份证</string>
    <string name="MRTTTP">大陆居民往来台湾通行证</string>
    <string name="visa">签证</string>
    <string name="NEEPT_HK_Macau">新版港澳通行证</string>
    <string name="HRPO">回乡证(正面)</string>
    <string name="HRPR">回乡证(背面)</string>
    <string name="MyKad">马来西亚身份证</string> <!-- 马来西亚身份证的叫法 -->
    <string name="TRTTTMTP">台胞证</string>
    <string name="NTRTTTMTP">新版台胞证(正面)</string>
    <string name="NTRTTTMTP_01">新版台胞证(背面)</string>
    <string name="Taiwan_IDcard_front">台湾身份证(正面)</string>
    <string name="Taiwan_IDcard_reverse">台湾身份证(背面)</string>
    <string name="National_health_insurance_card">全民健康保险卡</string>
    <string name="Driver_license">新西兰驾照</string>
    <string name="California_driver_license">加利福尼亚驾照</string> <!-- 加利福尼亚驾照 -->
    <string name="HK_IDcard">香港身份证</string>
    <string name="US">美国</string>
    <string name="Singapore_IDcard">新加坡身份证</string>
    <string name="mrz">机读码</string>
    <string name="china_driver">中国驾照</string>
    <string name="china_driving_license">中国行驶证</string>
    <string name="save_full_picture">保存整图</string>
    <string name="openCameraPermission">请开启相机权限!</string>
    <string name="title_activity_login_new">LoginNewActivity</string>
    <string name="sms_code">获取验证码</string>
    <string name="please_input_phoneNum">请输入手机号码</string>
    <string name="mobile_icon">手机icon</string>
    <string name="code_icon">验证码图标</string>
    <string name="please_input_code">请输入验证码</string>
    <string name="login">登录</string>
    <string name="please_select_id_type">请选择您的入网证件类型:</string>
    <string name="identity_card">居民身份证</string>
    <string name="foreigner_permanent_residence_ID_card">外国人永久居留身份证</string>

</resources>
