<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_ActivationProgram"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ActivationProgram"
        android:visibility="invisible" />

    <Button
        android:id="@+id/btn_chooserIdCardType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chooserIdCardType" />

    <Button
        android:id="@+id/btn_takePicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/takePicture" />

    <Button
        android:id="@+id/btn_importRecog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/importRecog" />



    <Button
        android:id="@+id/btn_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit" />
    <Button
        android:id="@+id/btn_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/btn_exit"
        android:layout_below="@id/btn_exit"
        android:text="完成" />

</RelativeLayout>