<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="30dp"
    android:paddingTop="30dp"
    android:paddingBottom="20dp"
    android:background="@drawable/dialog2"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:text="@string/please_select_id_type"/>

    <RadioGroup
        android:id="@+id/rg_type_list"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rb_id_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:buttonTint="@color/colorOrange"
            android:text="@string/identity_card" />

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <RadioButton
            android:id="@+id/rb_residence_permit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:buttonTint="@color/colorOrange"
            android:text="@string/foreigner_permanent_residence_ID_card" />

    </RadioGroup>

    <TextView
        android:id="@+id/tv_confirm"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/shape_bt_background_new"
        android:gravity="center"
        android:text="@string/confirm"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"/>

</LinearLayout>
