<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_password_forget"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    tools:context=".activity.main.NumberVerificationActivity">

    <include layout="@layout/layout_background_two" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorGray7" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:orientation="vertical"
        android:paddingStart="15dp"
        android:paddingEnd="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/phone"
                android:contentDescription="@string/mobile_icon" />

            <TextView
                android:id="@+id/phone_num"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorGray7" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/lock"
                android:contentDescription="@string/code_icon" />

            <EditText
                android:id="@+id/etCode"
                style="@style/editContent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/please_input_code"
                android:inputType="text" />

            <TextView
                android:id="@+id/tvGetCode"
                android:layout_width="80dp"
                android:layout_height="24dp"
                android:background="@drawable/shape_button_bg"
                android:gravity="center"
                android:text="@string/sms_code"
                android:textColor="@color/colorGray"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tvSuccessTip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="您好，已向您工号实名绑定的手机号发送验证码，请进行验证。"
        android:textColor="@color/appColor"
        android:paddingHorizontal="15dp"
        android:paddingVertical="5dp"
        android:textSize="12sp"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="39dp"
        android:background="@drawable/shape_bt_background_new"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/colorWhite"
        android:textSize="14sp" />

</LinearLayout>
